src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

#root main {
  height: 100%;
  font-family: "Montserrat";
}

body {
  overflow: hidden;
}

svg {
  display: inline;
}
.activeTabLayout {
  border-right: 1px solid var(--gray-1, #333);
  border-left: 1px solid var(--gray-1, #333);
  background: #1b1b1b;
  padding: 12px 8px;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  gap: 10px;
  color: white;
}
.submenu-react li > ul {
  transform: translatex(100%) scale(1);
}
.submenu-react li:hover > ul {
  transform: translatex(101%) scale(1);
}
.submenu-react li > button svg {
  transform: rotate(-90deg);
}

.section-component-layout {
  height: calc(100% - 86px - 101.28px);

  flex-direction: row-reverse;
  position: relative;
}

.sampleoneanimation {
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 999;
}
#quizWhitePage input,
#quizWhitePage select {
  border: 1px solid black;
}

